--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "model-core",
+	"name": "@3mo/model-core",
 	"version": "1.0.0",
 	"description": "A robust, unified and modern design library to build web applications using native web components. It also includes wrapped Material Web Components by Google's Material Design Language (MDL).",
 	"main": "index.ts",
