--- a/package.json
+++ b/package.json
@@ -49,24 +49,22 @@
 		"lit-virtualizer": "0.*",
 		"route-parser": "0.0.5",
 		"@types/route-parser": "0.1.*",
-		"swiper": "6.*"
+		"swiper": "6.*",
+		"tsconfig-paths-webpack-plugin": "*",
+		"ts-loader": "*",
+		"terser-webpack-plugin": "4.*",
+		"copy-webpack-plugin": "*",
+		"html-webpack-plugin": "*"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "4.*",
 		"@typescript-eslint/parser": "4.*",
-		"copy-webpack-plugin": "*",
 		"eslint": "*",
 		"eslint-plugin-import": "*",
 		"eslint-plugin-lit": "*",
-		"html-webpack-plugin": "*",
 		"lit-analyzer": "1.*",
 		"ts-lit-plugin": "1.*",
-		"terser-webpack-plugin": "4.*",
-		"ts-loader": "*",
 		"typescript": "4.*",
-		"typescript-eslint": "*",
-		"webpack": "4.*",
-		"webpack-cli": "3.*",
-		"webpack-dev-server": "*"
+		"typescript-eslint": "*"
 	}
 }
