--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"tsconfig-paths-webpack-plugin": "*",
 		"ts-loader": "*",
 		"terser-webpack-plugin": "4.*",
-		"copy-webpack-plugin": "*",
+		"copy-webpack-plugin": "6.*",
 		"html-webpack-plugin": "*"
 	},
 	"devDependencies": {
