--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"ts-loader": "*",
 		"terser-webpack-plugin": "4.*",
 		"copy-webpack-plugin": "6.*",
-		"html-webpack-plugin": "*"
+		"html-webpack-plugin": "4.*"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "4.*",
