--- a/package.json
+++ b/package.json
@@ -43,18 +43,18 @@
 		"@material/mwc-textarea": "0.19.*",
 		"@material/mwc-textfield": "0.19.*",
 		"@material/mwc-top-app-bar": "0.19.*",
+		"@types/route-parser": "0.1.*",
 		"bowser": "2.*",
+		"copy-webpack-plugin": "7.*",
 		"csstype": "3.*",
+		"html-webpack-plugin": "5.*",
 		"lit-element": "2.*",
 		"lit-virtualizer": "0.*",
 		"route-parser": "0.0.5",
-		"@types/route-parser": "0.1.*",
 		"swiper": "6.*",
-		"tsconfig-paths-webpack-plugin": "*",
-		"ts-loader": "*",
 		"terser-webpack-plugin": "4.*",
-		"copy-webpack-plugin": "6.*",
-		"html-webpack-plugin": "4.*"
+		"ts-loader": "8.*",
+		"tsconfig-paths-webpack-plugin": "3.*"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "4.*",
