--- a/package.json
+++ b/package.json
@@ -44,26 +44,24 @@
 		"@material/mwc-textfield": "0.19.*",
 		"@material/mwc-top-app-bar": "0.19.*",
 		"@types/route-parser": "0.1.*",
+		"@typescript-eslint/eslint-plugin": "4.*",
+		"@typescript-eslint/parser": "4.*",
 		"bowser": "2.*",
 		"copy-webpack-plugin": "7.*",
 		"csstype": "3.*",
+		"eslint": "*",
+		"eslint-plugin-import": "*",
+		"eslint-plugin-lit": "*",
 		"html-webpack-plugin": "5.*",
+		"lit-analyzer": "1.*",
 		"lit-element": "2.*",
 		"lit-virtualizer": "0.*",
 		"route-parser": "0.0.5",
 		"swiper": "6.*",
 		"terser-webpack-plugin": "4.*",
-		"ts-loader": "8.*",
-		"tsconfig-paths-webpack-plugin": "3.*"
-	},
-	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "4.*",
-		"@typescript-eslint/parser": "4.*",
-		"eslint": "*",
-		"eslint-plugin-import": "*",
-		"eslint-plugin-lit": "*",
-		"lit-analyzer": "1.*",
 		"ts-lit-plugin": "1.*",
+		"ts-loader": "8.*",
+		"tsconfig-paths-webpack-plugin": "3.*",
 		"typescript": "4.*",
 		"typescript-eslint": "*"
 	}
