feat: testing tools

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"@material/mwc-menu": "0.19.*",
 		"@material/mwc-radio": "0.19.*",
 		"@material/mwc-ripple": "0.19.*",
-		"@material/mwc-select": "^0.19.1",
+		"@material/mwc-select": "0.19.*",
 		"@material/mwc-slider": "0.19.*",
 		"@material/mwc-snackbar": "0.19.*",
 		"@material/mwc-switch": "0.19.*",
@@ -43,6 +43,7 @@
 		"@material/mwc-textarea": "0.19.*",
 		"@material/mwc-textfield": "0.19.*",
 		"@material/mwc-top-app-bar": "0.19.*",
+		"@types/jasmine": "3.*",
 		"@types/route-parser": "0.1.*",
 		"@typescript-eslint/eslint-plugin": "4.*",
 		"@typescript-eslint/parser": "4.*",
@@ -53,10 +54,14 @@
 		"eslint-plugin-import": "*",
 		"eslint-plugin-lit": "*",
 		"html-webpack-plugin": "5.*",
+		"karma": "6.*",
+		"karma-chrome-launcher": "3.*",
+		"karma-jasmine": "4.*",
+		"karma-spec-reporter": "*",
 		"lit-analyzer": "1.*",
 		"lit-element": "2.*",
 		"lit-virtualizer": "0.*",
-		"route-parser": "0.0.5",
+		"route-parser": "*",
 		"swiper": "6.*",
 		"terser-webpack-plugin": "4.*",
 		"ts-lit-plugin": "1.*",
