--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@3mo/model-core",
+	"name": "@3mo/model",
 	"version": "1.0.0",
 	"description": "A robust, unified and modern design library to build web applications using native web components. It also includes wrapped Material Web Components by Google's Material Design Language (MDL).",
 	"main": "index.ts",
@@ -9,14 +9,14 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/3mo-esolutions/model-core.git"
+		"url": "git+https://github.com/3mo-esolutions/model.git"
 	},
 	"author": "3MO",
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/3mo-esolutions/model-core/issues"
+		"url": "https://github.com/3mo-esolutions/model/issues"
 	},
-	"homepage": "https://github.com/3mo-esolutions/model-core#readme",
+	"homepage": "https://github.com/3mo-esolutions/model#readme",
 	"dependencies": {
 		"@material/mwc-button": "0.19.*",
 		"@material/mwc-checkbox": "0.19.*",
