docs: add MoDeL Docs website

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,7 +32,7 @@ jobs:
           name: artifact
           path: dist
 
-  release-demo:
+  release:
     runs-on: ubuntu-latest
     defaults:
       run:
