--- a/samples/model-docs/package.json
+++ b/samples/model-docs/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@3mo/sample-client",
+	"name": "@3mo/model-docs",
 	"version": "0.0.1",
 	"scripts": {
 		"start": "webpack serve --mode=development",
@@ -10,17 +10,20 @@
 	},
 	"license": "UNLICENSED",
 	"dependencies": {
-		"@3mo/model": "git+https://github.com/3mo-esolutions/model.git"
+		"@3mo/model": "git+https://github.com/3mo-esolutions/model.git",
+		"@octokit/core": "3.*",
+		"@ts-stack/markdown": "1.*",
+		"@vanillawc/wc-monaco-editor": "1.*"
 	},
 	"devDependencies": {
+		"favicons": "*",
+		"favicons-webpack-plugin": "*",
 		"lit-analyzer": "1.*",
 		"standard-version": "*",
 		"ts-lit-plugin": "1.*",
 		"typescript": "4.*",
 		"webpack": "5.*",
 		"webpack-cli": "4.*",
-		"webpack-dev-server": "3.*",
-		"favicons": "*",
-		"favicons-webpack-plugin": "*"
+		"webpack-dev-server": "3.*"
 	}
 }
