--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,9 +14,15 @@ jobs:
     defaults:
       run:
         working-directory: samples/model-docs
+
     steps:
       - name: Checkout the files
         uses: actions/checkout@v1
+
+      - name: Reconfigure git to use HTTP authentication
+        run: >
+          git config --global url."https://github.com/".insteadOf
+          ssh://git@github.com/
 
       - name: Setup Node.js 14
         uses: actions/setup-node@v1
@@ -26,11 +32,12 @@ jobs:
         run: |
           npm ci
           npm run build
+
       - name: Upload the artifacts to GitHub
         uses: actions/upload-artifact@v1.0.0
         with:
           name: artifact
-          path: dist
+          path: samples/model-docs/dist
 
   release:
     runs-on: ubuntu-latest
