--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A robust, unified and modern design library to build web applications using native web components. It also includes wrapped Material Web Components by Google's Material Design Language (MDL).",
 	"main": "index.ts",
 	"scripts": {
-		"check": "lit-analyzer ./{components,library,helpers,globals,types,localization}/**/* --strict --rules.no-missing-import off",
+		"check": "lit-analyzer ./src/**/* --strict --rules.no-missing-import off",
 		"lint": "eslint ."
 	},
 	"repository": {
