--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A robust, unified and modern design library to build web applications using native web components. It also includes wrapped Material Web Components by Google's Material Design Language (MDL).",
 	"main": "index.ts",
 	"scripts": {
+		"start": "cd ./samples/sample-client && npm start",
 		"check": "lit-analyzer ./src/**/* --strict --rules.no-missing-import off",
 		"lint": "eslint ."
 	},
