--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
 	"version": "1.0.0",
 	"description": "A robust, unified and modern design library to build web applications using native web components. It also includes wrapped Material Web Components by Google's Material Design Language (MDL).",
 	"main": "index.ts",
+	"author": "3MO",
+	"license": "Apache 2.0",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/3mo-esolutions/model.git"
+	},
+	"bugs": {
+		"url": "https://github.com/3mo-esolutions/model/issues"
+	},
+	"homepage": "https://github.com/3mo-esolutions/model#readme",
 	"scripts": {
 		"start": "cd ./samples/sample-client && npm start",
 		"check": "lit-analyzer ./src/**/* --strict --rules.no-missing-import off",
 		"lint": "eslint ."
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/3mo-esolutions/model.git"
-	},
-	"author": "3MO",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/3mo-esolutions/model/issues"
-	},
-	"homepage": "https://github.com/3mo-esolutions/model#readme",
 	"dependencies": {
 		"@material/mwc-button": "0.19.*",
 		"@material/mwc-checkbox": "0.19.*",
