refactor: activate TypeScript's noImplicitOverride

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
 		"allowSyntheticDefaultImports": true,
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
+		"noImplicitOverride": true,
 		"resolveJsonModule": true,
 		"plugins": [
 			{
