--- a/samples/sample-client/tsconfig.json
+++ b/samples/sample-client/tsconfig.json
@@ -19,6 +19,7 @@
 		"allowSyntheticDefaultImports": true,
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
+		"noImplicitOverride": true,
 		"plugins": [
 			{
 				"name": "ts-lit-plugin",
