--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"ts-loader": "9.*",
 		"tsconfig-paths-webpack-plugin": "3.*",
 		"typescript": "4.3.*",
-		"typescript-eslint": "*"
+		"typescript-eslint": "*",
+		"karma-parallel": "*"
 	}
 }
