--- a/package.json
+++ b/package.json
@@ -19,29 +19,29 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
-		"@material/mwc-button": "0.21.*",
-		"@material/mwc-checkbox": "0.21.*",
-		"@material/mwc-circular-progress": "0.21.*",
-		"@material/mwc-circular-progress-four-color": "0.21.*",
-		"@material/mwc-dialog": "0.21.*",
-		"@material/mwc-drawer": "0.21.*",
-		"@material/mwc-fab": "0.21.*",
-		"@material/mwc-formfield": "0.21.*",
-		"@material/mwc-icon": "0.21.*",
-		"@material/mwc-icon-button": "0.21.*",
-		"@material/mwc-icon-button-toggle": "0.21.*",
-		"@material/mwc-linear-progress": "0.21.*",
-		"@material/mwc-list": "0.21.*",
-		"@material/mwc-menu": "0.21.*",
-		"@material/mwc-radio": "0.21.*",
-		"@material/mwc-ripple": "0.21.*",
-		"@material/mwc-slider": "0.21.*",
-		"@material/mwc-snackbar": "0.21.*",
-		"@material/mwc-switch": "0.21.*",
-		"@material/mwc-tab": "0.21.*",
-		"@material/mwc-tab-bar": "0.21.*",
-		"@material/mwc-textarea": "0.21.*",
-		"@material/mwc-top-app-bar": "0.21.*",
+		"@material/mwc-button": "0.25.*",
+		"@material/mwc-checkbox": "0.25.*",
+		"@material/mwc-circular-progress": "0.25.*",
+		"@material/mwc-circular-progress-four-color": "0.25.*",
+		"@material/mwc-dialog": "0.25.*",
+		"@material/mwc-drawer": "0.25.*",
+		"@material/mwc-fab": "0.25.*",
+		"@material/mwc-formfield": "0.25.*",
+		"@material/mwc-icon": "0.25.*",
+		"@material/mwc-icon-button": "0.25.*",
+		"@material/mwc-icon-button-toggle": "0.25.*",
+		"@material/mwc-linear-progress": "0.25.*",
+		"@material/mwc-list": "0.25.*",
+		"@material/mwc-menu": "0.25.*",
+		"@material/mwc-radio": "0.25.*",
+		"@material/mwc-ripple": "0.25.*",
+		"@material/mwc-slider": "0.25.*",
+		"@material/mwc-snackbar": "0.25.*",
+		"@material/mwc-switch": "0.25.*",
+		"@material/mwc-tab": "0.25.*",
+		"@material/mwc-tab-bar": "0.25.*",
+		"@material/mwc-textarea": "0.25.*",
+		"@material/mwc-top-app-bar": "0.25.*",
 		"@types/jasmine": "3.*",
 		"@types/route-parser": "0.1.*",
 		"@typescript-eslint/eslint-plugin": "4.*",
@@ -58,14 +58,14 @@
 		"karma-jasmine": "4.*",
 		"karma-spec-reporter": "*",
 		"lit-analyzer": "1.*",
-		"lit-element": "2.4.*",
-		"lit-virtualizer": "0.*",
+		"lit": "2.*",
+		"@lit-labs/virtualizer": "0.7.0-pre.2",
 		"route-parser": "*",
 		"terser-webpack-plugin": "*",
 		"ts-lit-plugin": "1.*",
 		"ts-loader": "9.*",
 		"tsconfig-paths-webpack-plugin": "3.*",
-		"typescript": "4.3.*",
+		"typescript": "4.*",
 		"typescript-eslint": "*",
 		"karma-parallel": "*"
 	}
