--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
+		"@lit-labs/task": "1.*",
+		"@lit-labs/virtualizer": "0.7.0-pre.2",
 		"@material/mwc-button": "0.25.*",
 		"@material/mwc-checkbox": "0.25.*",
 		"@material/mwc-circular-progress": "0.25.*",
@@ -56,17 +58,16 @@
 		"karma": "6.*",
 		"karma-chrome-launcher": "3.*",
 		"karma-jasmine": "4.*",
+		"karma-parallel": "*",
 		"karma-spec-reporter": "*",
-		"lit-analyzer": "1.*",
 		"lit": "2.*",
-		"@lit-labs/virtualizer": "0.7.0-pre.2",
+		"lit-analyzer": "1.*",
 		"route-parser": "*",
 		"terser-webpack-plugin": "*",
 		"ts-lit-plugin": "1.*",
 		"ts-loader": "9.*",
 		"tsconfig-paths-webpack-plugin": "3.*",
 		"typescript": "4.*",
-		"typescript-eslint": "*",
-		"karma-parallel": "*"
+		"typescript-eslint": "*"
 	}
 }
