--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
+		"@js-temporal/polyfill": "^0.4.0",
 		"@lit-labs/task": "1.*",
 		"@lit-labs/virtualizer": "0.7.0-pre.2",
 		"@material/mwc-button": "0.25.*",
