--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
-		"@js-temporal/polyfill": "^0.4.0",
 		"@lit-labs/task": "1.*",
 		"@lit-labs/virtualizer": "0.7.0-pre.2",
 		"@material/mwc-button": "0.25.*",
@@ -64,6 +63,7 @@
 		"lit": "2.*",
 		"lit-analyzer": "1.*",
 		"route-parser": "*",
+		"temporal-polyfill": "^0.0.5",
 		"terser-webpack-plugin": "*",
 		"ts-lit-plugin": "1.*",
 		"ts-loader": "9.*",
