--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"moduleResolution": "node",
 		"lib": [
 			"ES2017",
+			"ES2019",
 			"ES2020",
 			"DOM",
 			"DOM.iterable"
@@ -17,7 +18,6 @@
 		"rootDir": ".",
 		"strict": true,
 		"noUnusedLocals": true,
-		"noUnusedParameters": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"allowSyntheticDefaultImports": true,
@@ -28,7 +28,13 @@
 		"plugins": [
 			{
 				"name": "ts-lit-plugin",
-				"strict": true
+				"strict": true,
+				"rules": {
+					"no-missing-import": "off",
+					"no-unclosed-tag": "error",
+					"no-incompatible-type-binding": "warning",
+					"no-incompatible-property-type": "warning"
+				}
 			}
 		]
 	}
