--- a/samples/sample-client/tsconfig.json
+++ b/samples/sample-client/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"incremental": true,
+		"importHelpers": true,
 		"target": "ES2017",
 		"module": "ES2015",
 		"moduleResolution": "node",
