--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"incremental": true,
 		"importHelpers": true,
+		"baseUrl": ".",
 		// TODO #35822 TypeScript doesn't support mixin declarations.
 		// https://github.com/microsoft/TypeScript/issues/35822
 		// "declaration": true,
@@ -38,5 +39,10 @@
 				}
 			}
 		]
-	}
+	},
+	"exclude": [
+		"node_modules",
+		"test-temp",
+		"samples"
+	]
 }
