--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
 		"ts-loader": "9.*",
 		"tsconfig-paths-webpack-plugin": "3.*",
 		"typescript": "4.*",
-		"typescript-eslint": "*",
+		"typescript-eslint": "0.0.1-alpha.0",
 		"webpack": "5.*",
 		"webpack-cli": "4.*"
 	}
