chore: Update dependencies

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	},
 	"dependencies": {
 		"@lit-labs/task": "1.*",
-		"@lit-labs/virtualizer": "0.7.0-pre.2",
+		"@lit-labs/virtualizer": "0.7.0-pre.3",
 		"@material/mwc-button": "0.25.*",
 		"@material/mwc-checkbox": "0.25.*",
 		"@material/mwc-circular-progress": "0.25.*",
@@ -49,36 +49,35 @@
 		"@material/mwc-tab-bar": "0.25.*",
 		"@material/mwc-textarea": "0.25.*",
 		"@material/mwc-top-app-bar": "0.25.*",
-		"csstype": "3.*",
+		"csstype": "*",
 		"lit": "2.*",
 		"route-parser": "*",
 		"temporal-polyfill": "*",
-		"bowser": "2.*",
-		"@types/jasmine": "3.*",
-		"@types/route-parser": "0.1.*"
+		"bowser": "*",
+		"@types/jasmine": "*",
+		"@types/route-parser": "*"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "4.*",
-		"@typescript-eslint/parser": "4.*",
+		"@typescript-eslint/eslint-plugin": "*",
+		"@typescript-eslint/parser": "*",
 		"concurrently": "*",
-		"copy-webpack-plugin": "7.*",
+		"copy-webpack-plugin": "9.*",
 		"eslint": "*",
 		"eslint-plugin-import": "*",
 		"eslint-plugin-lit": "*",
-		"html-webpack-plugin": "5.*",
-		"karma": "6.*",
-		"karma-chrome-launcher": "3.*",
+		"html-webpack-plugin": "*",
+		"karma": "*",
+		"karma-chrome-launcher": "*",
 		"karma-firefox-launcher": "*",
 		"karma-helpful-reporter": "*",
-		"karma-jasmine": "4.*",
+		"karma-jasmine": "*",
 		"karma-parallel": "*",
-		"lit-analyzer": "1.*",
+		"lit-analyzer": "*",
 		"terser-webpack-plugin": "*",
-		"ts-lit-plugin": "1.*",
-		"ts-loader": "9.*",
-		"tsconfig-paths-webpack-plugin": "3.*",
+		"ts-lit-plugin": "*",
+		"ts-loader": "*",
+		"tsconfig-paths-webpack-plugin": "*",
 		"typescript": "4.*",
-		"typescript-eslint": "0.0.1-alpha.0",
 		"webpack": "5.*",
 		"webpack-cli": "4.*"
 	}
