--- a/samples/sample-client/package.json
+++ b/samples/sample-client/package.json
@@ -13,15 +13,14 @@
 		"@3mo/model": "file:../.."
 	},
 	"devDependencies": {
-		"concurrently": "6.*",
-		"favicons": "*",
+		"concurrently": "*",
 		"favicons-webpack-plugin": "*",
-		"lit-analyzer": "1.*",
+		"lit-analyzer": "*",
 		"standard-version": "*",
-		"ts-lit-plugin": "1.*",
+		"ts-lit-plugin": "*",
 		"typescript": "4.*",
 		"webpack": "5.*",
-		"webpack-cli": "4.*",
-		"webpack-dev-server": "3.*"
+		"webpack-cli": "*",
+		"webpack-dev-server": "*"
 	}
 }
