--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,7 +61,7 @@
 		],
 		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/no-this-alias": "off",
-		"@typescript-eslint/no-non-null-assertion": "warn",
+		"@typescript-eslint/no-non-null-assertion": "off",
 		"@typescript-eslint/no-non-null-asserted-optional-chain": "warn",
 		"@typescript-eslint/no-namespace": "off",
 		"@typescript-eslint/no-empty-function": "off",
