refactor!: Handle keyboard events via dialog host
- Changed API of "escapeKeyAction=''" to preventCancellationOnEscape boolean

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"noImplicitOverride": true,
 		"resolveJsonModule": true,
+		"noUncheckedIndexedAccess": true,
 		"plugins": [
 			{
 				"name": "ts-lit-plugin",
