--- a/samples/sample-client/tsconfig.json
+++ b/samples/sample-client/tsconfig.json
@@ -22,6 +22,7 @@
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
 		"noImplicitOverride": true,
+		"resolveJsonModule": true,
 		"plugins": [
 			{
 				"name": "ts-lit-plugin",
