--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 	"dependencies": {
 		"@3mo/flex": "*",
 		"@3mo/grid": "*",
-		"@3mo/icon": "^1.0.0",
+		"@3mo/icon": "*",
+		"@3mo/icon-button": "*",
 		"@a11d/lit": "*",
 		"@lit-labs/task": "1.*",
 		"@lit-labs/virtualizer": "0.7.0-pre.3",
@@ -38,9 +39,6 @@
 		"@material/mwc-drawer": "0.25.*",
 		"@material/mwc-fab": "0.25.*",
 		"@material/mwc-formfield": "0.25.*",
-		"@material/mwc-icon": "0.25.*",
-		"@material/mwc-icon-button": "0.25.*",
-		"@material/mwc-icon-button-toggle": "0.25.*",
 		"@material/mwc-linear-progress": "0.25.*",
 		"@material/mwc-list": "0.25.*",
 		"@material/mwc-menu": "0.25.*",
