chore: Migrate to Anchor

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"test:ci": "npm run build && npm run test"
 	},
 	"dependencies": {
+		"@3mo/anchor": "*",
 		"@3mo/flex": "*",
 		"@3mo/grid": "*",
 		"@3mo/icon": "*",
