--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@3mo/grid": "*",
 		"@3mo/icon": "*",
 		"@3mo/icon-button": "*",
+		"@3mo/scroller": "*",
 		"@a11d/lit": "*",
 		"@lit-labs/task": "1.*",
 		"@lit-labs/virtualizer": "0.7.0-pre.3",
