refactor: Migrate to new button and progress packages

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,261 +1,6 @@
 {
 	"root": true,
-	"parser": "@typescript-eslint/parser",
-	"parserOptions": {
-		"project": "./tsconfig.json"
-	},
-	"plugins": [
-		"@typescript-eslint",
-		"import",
-		"lit"
-	],
-	"ignorePatterns": [
-		"node_modules",
-		"dist",
-		"test-temp",
-		"samples"
-	],
 	"extends": [
-		"eslint:recommended",
-		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended",
-		"plugin:import/errors",
-		"plugin:import/warnings",
-		"plugin:import/typescript",
-		"plugin:lit/recommended"
-	],
-	"env": {
-		"browser": true
-	},
-	"overrides": [
-		{
-			"files": [
-				"**/*.ts"
-			],
-			"excludedFiles": "webpack.config.js"
-		}
-	],
-	"rules": {
-		"lit/no-missing-import": "off",
-		"lit/no-template-bind": "error",
-		"lit/no-useless-template-literals": "error",
-		"lit/quoted-expressions": "error",
-		"@typescript-eslint/type-annotation-spacing": [
-			"error",
-			{
-				"before": false,
-				"after": true,
-				"overrides": {
-					"arrow": {
-						"before": true,
-						"after": true
-					}
-				}
-			}
-		],
-		"@typescript-eslint/explicit-member-accessibility": [
-			"warn",
-			{
-				"accessibility": "no-public"
-			}
-		],
-		"@typescript-eslint/no-explicit-any": "off",
-		"@typescript-eslint/no-this-alias": "off",
-		"@typescript-eslint/no-non-null-assertion": "off",
-		"@typescript-eslint/no-non-null-asserted-optional-chain": "warn",
-		"@typescript-eslint/no-namespace": "off",
-		"@typescript-eslint/no-empty-function": "off",
-		"@typescript-eslint/no-empty-interface": "off",
-		"@typescript-eslint/no-unnecessary-condition": "warn",
-		"@typescript-eslint/prefer-includes": "warn",
-		"@typescript-eslint/prefer-readonly": "warn",
-		"@typescript-eslint/prefer-string-starts-ends-with": "warn",
-		"@typescript-eslint/prefer-optional-chain": "error",
-		"@typescript-eslint/prefer-for-of": "warn",
-		"@typescript-eslint/member-delimiter-style": [
-			"error",
-			{
-				"multiline": {
-					"delimiter": "none"
-				},
-				"singleline": {
-					"delimiter": "comma"
-				}
-			}
-		],
-		"@typescript-eslint/ban-ts-comment": [
-			"error",
-			{
-				"ts-ignore": "allow-with-description",
-				"minimumDescriptionLength": 10
-			}
-		],
-		"@typescript-eslint/explicit-module-boundary-types": "off",
-		"@typescript-eslint/member-ordering": [
-			"error",
-			{
-				"default": [
-					"signature",
-					"static-field",
-					"static-method",
-					"decorated-field",
-					"abstract-field",
-					"instance-field",
-					"constructor",
-					"decorated-method",
-					"abstract-method",
-					"instance-method"
-				]
-			}
-		],
-		"@typescript-eslint/naming-convention": [
-			"off",
-			{
-				"selector": [
-					"variable",
-					"objectLiteralProperty",
-					"typeProperty",
-					"parameterProperty",
-					"classMethod",
-					"objectLiteralMethod",
-					"typeMethod",
-					"accessor",
-					"function"
-				],
-				"filter": {
-					"regex": "^([A-Z].*Mixin$)|(_$)|(Constructor$)|([A-Z].*Constructor$)",
-					"match": false
-				},
-				"format": [
-					"camelCase"
-				]
-			},
-			{
-				"selector": [
-					"classProperty",
-					"parameter"
-				],
-				"filter": {
-					"regex": "^([A-Z].*Mixin$)|(_$)|(Constructor$)|([A-Z].*Constructor$)",
-					"match": false
-				},
-				"format": [
-					"camelCase"
-				],
-				"leadingUnderscore": "allow"
-			},
-			{
-				"selector": [
-					"enumMember",
-					"class",
-					"interface",
-					"typeAlias",
-					"enum",
-					"typeParameter"
-				],
-				"format": [
-					"PascalCase"
-				]
-			}
-		],
-		"@typescript-eslint/array-type": [
-			"error",
-			{
-				"default": "generic"
-			}
-		],
-		"indent": [
-			"error",
-			"tab",
-			{
-				"SwitchCase": 1
-			}
-		],
-		"no-trailing-spaces": "error",
-		"eol-last": [
-			"error",
-			"never"
-		],
-		"semi": [
-			"error",
-			"never"
-		],
-		"quotes": [
-			"error",
-			"single"
-		],
-		"prefer-template": "error",
-		"no-unused-vars": "off",
-		"no-case-declarations": "off",
-		"no-self-assign": "off",
-		"no-useless-escape": "off",
-		"brace-style": [
-			"error",
-			"1tbs",
-			{
-				"allowSingleLine": true
-			}
-		],
-		"keyword-spacing": [
-			"error",
-			{
-				"before": true,
-				"after": true
-			}
-		],
-		"import/no-useless-path-segments": [
-			"error",
-			{
-				"noUselessIndex": true
-			}
-		],
-		"import/no-internal-modules": [
-			"error",
-			{
-				"allow": [
-					"@3mo/**/*",
-					"@material/mwc-list/mwc-list-item"
-				]
-			}
-		],
-		"import/no-duplicates": "error",
-		"no-console": "error",
-		"space-before-blocks": "error",
-		"space-infix-ops": "error",
-		"comma-spacing": [
-			"error",
-			{
-				"before": false,
-				"after": true
-			}
-		],
-		"key-spacing": [
-			"error",
-			{
-				"beforeColon": false,
-				"afterColon": true
-			}
-		],
-		"no-restricted-syntax": [
-			"error",
-			{
-				"selector": "TSEnumDeclaration:not([const=true])",
-				"message": "MoDeL: Don't declare non-const enums to decrease application size at runtime"
-			}
-		],
-		"no-eval": "error",
-		"eqeqeq": "error",
-		"no-return-await": "error",
-		"require-await": "error",
-		"template-curly-spacing": [
-			"error",
-			"never"
-		],
-		"object-curly-spacing": [
-			"error",
-			"always"
-		],
-		"curly": "error"
-	}
+		"./node_modules/@a11d/eslint-config/.eslintrc.json"
+	]
 }
-// TODO: https://github.com/typescript-eslint/typescript-eslint/issues/2673
