chore: MIgrate to "@3mo/key-path" package

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@3mo/grid": "*",
 		"@3mo/icon": "*",
 		"@3mo/icon-button": "*",
+		"@3mo/key-path": "*",
 		"@3mo/linear-progress": "*",
 		"@3mo/loading-button": "*",
 		"@3mo/mutation-observer": "*",
