--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@a11d/lit": "^0.0.34",
 		"@a11d/lit-application": "^0.0.12",
 		"@a11d/lit-application-authentication": "^0.0.4",
+		"@a11d/lit-application-authorization": "^0.0.3",
 		"@lit-labs/task": "2.0.0",
 		"@material/mwc-dialog": "^0.27.0",
 		"@material/mwc-drawer": "^0.27",
