chore: Update packages

--- a/package.json
+++ b/package.json
@@ -24,81 +24,78 @@
 		"test:ci": "npm run build && npm run test"
 	},
 	"dependencies": {
-		"@3mo/anchor": "^1.0.1",
-		"@3mo/button": "^0.1.6",
-		"@3mo/button-group": "^0.1.0",
-		"@3mo/checkbox": "^0.0.4",
-		"@3mo/checkbox-group": "^0.0.3",
-		"@3mo/circular-progress": "^0.1.0",
-		"@3mo/fab": "^0.1.3",
-		"@3mo/flex": "^1.0.4",
-		"@3mo/grid": "^1.0.2",
-		"@3mo/icon": "^1.0.6",
-		"@3mo/icon-button": "^1.0.7",
-		"@3mo/key-path": "^0.1.0",
-		"@3mo/linear-progress": "^0.1.0",
-		"@3mo/loading-button": "^0.1.0",
-		"@3mo/mutation-observer": "^0.0.3",
-		"@3mo/resize-observer": "^0.0.1",
-		"@3mo/scroller": "^0.1.2",
-		"@3mo/slot-controller": "^0.2.0",
-		"@3mo/virtualized-scroller": "^0.1.1",
-		"@a11d/lit": "^0.0.34",
-		"@a11d/lit-application": "^0.0.13",
-		"@a11d/lit-application-authentication": "^0.0.5",
-		"@a11d/lit-application-authorization": "^0.0.4",
-		"@lit-labs/task": "2.0.0",
-		"@material/mwc-dialog": "^0.27.0",
-		"@material/mwc-drawer": "^0.27",
-		"@material/mwc-fab": "^0.27",
-		"@material/mwc-formfield": "^0.27",
-		"@material/mwc-list": "^0.27",
-		"@material/mwc-menu": "^0.27",
-		"@material/mwc-radio": "^0.27",
-		"@material/mwc-ripple": "^0.27",
-		"@material/mwc-slider": "^0.27",
-		"@material/mwc-snackbar": "^0.27",
-		"@material/mwc-switch": "^0.27",
-		"@material/mwc-tab": "^0.27",
-		"@material/mwc-tab-bar": "^0.27",
-		"@material/mwc-textarea": "^0.27",
-		"@material/mwc-top-app-bar": "^0.27",
-		"@ts-stack/markdown": "^1.4",
-		"@types/jasmine": "^4.3",
-		"@types/route-parser": "^0.1",
-		"bowser": "^2.11",
-		"csstype": "^3",
-		"favicons": "6.2",
-		"favicons-webpack-plugin": "*",
-		"lit": "^2.4",
-		"route-parser": "^0.0.5",
-		"temporal-polyfill": "^0.0.8"
+		"@3mo/anchor": "x",
+		"@3mo/button": "x",
+		"@3mo/button-group": "x",
+		"@3mo/checkbox": "x",
+		"@3mo/checkbox-group": "x",
+		"@3mo/circular-progress": "x",
+		"@3mo/fab": "x",
+		"@3mo/flex": "x",
+		"@3mo/grid": "x",
+		"@3mo/icon": "x",
+		"@3mo/icon-button": "x",
+		"@3mo/key-path": "x",
+		"@3mo/linear-progress": "x",
+		"@3mo/loading-button": "x",
+		"@3mo/mutation-observer": "x",
+		"@3mo/resize-observer": "x",
+		"@3mo/scroller": "x",
+		"@3mo/slot-controller": "x",
+		"@3mo/virtualized-scroller": "x",
+		"@a11d/lit": "x",
+		"@a11d/lit-application": "x",
+		"@a11d/lit-application-authentication": "x",
+		"@a11d/lit-application-authorization": "x",
+		"@lit-labs/task": "2.x",
+		"@material/mwc-dialog": "0.27.x",
+		"@material/mwc-drawer": "0.27.x",
+		"@material/mwc-fab": "0.27.x",
+		"@material/mwc-formfield": "0.27.x",
+		"@material/mwc-list": "0.27.x",
+		"@material/mwc-menu": "0.27.x",
+		"@material/mwc-radio": "0.27.x",
+		"@material/mwc-ripple": "0.27.x",
+		"@material/mwc-slider": "0.27.x",
+		"@material/mwc-snackbar": "0.27.x",
+		"@material/mwc-switch": "0.27.x",
+		"@material/mwc-tab": "0.27.x",
+		"@material/mwc-tab-bar": "0.27.x",
+		"@material/mwc-textarea": "0.27.x",
+		"@ts-stack/markdown": "1.x",
+		"@types/jasmine": "4.x",
+		"bowser": "2.x",
+		"csstype": "3.x",
+		"favicons": "6.x",
+		"favicons-webpack-plugin": "5.x",
+		"lit": "2.x",
+		"temporal-polyfill": "0.0.x"
 	},
 	"devDependencies": {
-		"@a11d/eslint-config": "*",
-		"@types/copy-webpack-plugin": "^10.1.0",
-		"@types/glob": "^8.0.0",
-		"@typescript-eslint/eslint-plugin": "*",
-		"@typescript-eslint/parser": "*",
-		"concurrently": "*",
-		"copy-webpack-plugin": "^9",
-		"eslint": "*",
-		"eslint-plugin-import": "*",
-		"eslint-plugin-lit": "*",
-		"html-webpack-plugin": "*",
-		"karma": "*",
-		"karma-chrome-launcher": "*",
-		"karma-firefox-launcher": "*",
-		"karma-helpful-reporter": "*",
-		"karma-jasmine": "*",
-		"karma-parallel": "*",
-		"lit-analyzer": "1.2.1",
-		"terser-webpack-plugin": "*",
-		"ts-lit-plugin": "*",
-		"ts-loader": "*",
-		"tsconfig-paths-webpack-plugin": "*",
-		"typescript": "4",
-		"webpack": "5",
-		"webpack-cli": "4"
+		"@a11d/eslint-config": "x",
+		"@types/copy-webpack-plugin": "10.x",
+		"@types/glob": "8.x",
+		"@typescript-eslint/eslint-plugin": "x",
+		"@typescript-eslint/parser": "x",
+		"concurrently": "x",
+		"copy-webpack-plugin": "9.x",
+		"eslint": "x",
+		"eslint-plugin-import": "x",
+		"eslint-plugin-lit": "x",
+		"html-webpack-plugin": "x",
+		"karma": "x",
+		"karma-chrome-launcher": "x",
+		"karma-firefox-launcher": "x",
+		"karma-helpful-reporter": "x",
+		"karma-jasmine": "x",
+		"karma-parallel": "x",
+		"lit-analyzer": "1.x",
+		"terser-webpack-plugin": "x",
+		"ts-lit-plugin": "x",
+		"ts-loader": "x",
+		"tsconfig-paths-webpack-plugin": "x",
+		"typescript": "4.x",
+		"webpack": "5.x",
+		"webpack-cli": "4.x"
 	}
 }
