chore: Migrate to @3mo/radio package

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"@3mo/button-group": "x",
 		"@3mo/checkbox": "x",
 		"@3mo/checkbox-group": "x",
+		"@3mo/switch": "x",
+		"@3mo/radio": "x",
 		"@3mo/circular-progress": "x",
 		"@3mo/fab": "x",
 		"@3mo/flex": "x",
@@ -42,7 +44,6 @@
 		"@3mo/resize-observer": "x",
 		"@3mo/scroller": "x",
 		"@3mo/slot-controller": "x",
-		"@3mo/switch": "x",
 		"@3mo/virtualized-scroller": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
@@ -55,7 +56,6 @@
 		"@material/mwc-formfield": "0.27.x",
 		"@material/mwc-list": "0.27.x",
 		"@material/mwc-menu": "0.27.x",
-		"@material/mwc-radio": "0.27.x",
 		"@material/mwc-ripple": "0.27.x",
 		"@material/mwc-slider": "0.27.x",
 		"@material/mwc-snackbar": "0.27.x",
