chore: Migrate to @3mo/splitter package

--- a/package.json
+++ b/package.json
@@ -29,9 +29,6 @@
 		"@3mo/button-group": "x",
 		"@3mo/checkbox": "x",
 		"@3mo/checkbox-group": "x",
-		"@3mo/switch": "x",
-		"@3mo/radio": "x",
-		"@3mo/slider": "x",
 		"@3mo/circular-progress": "x",
 		"@3mo/fab": "x",
 		"@3mo/flex": "x",
@@ -42,9 +39,13 @@
 		"@3mo/linear-progress": "x",
 		"@3mo/loading-button": "x",
 		"@3mo/mutation-observer": "x",
+		"@3mo/radio": "x",
 		"@3mo/resize-observer": "x",
 		"@3mo/scroller": "x",
+		"@3mo/slider": "x",
 		"@3mo/slot-controller": "x",
+		"@3mo/splitter": "x",
+		"@3mo/switch": "x",
 		"@3mo/virtualized-scroller": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
