--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@3mo/fab": "x",
 		"@3mo/flex": "x",
 		"@3mo/grid": "x",
+		"@3mo/heading": "x",
 		"@3mo/icon": "x",
 		"@3mo/icon-button": "x",
 		"@3mo/key-path": "x",
