chore: Migrate to @3mo/card component

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@3mo/anchor": "x",
 		"@3mo/button": "x",
 		"@3mo/button-group": "x",
+		"@3mo/card": "x",
 		"@3mo/checkbox": "x",
 		"@3mo/checkbox-group": "x",
 		"@3mo/circular-progress": "x",
