--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@3mo/fab": "x",
 		"@3mo/flex": "x",
 		"@3mo/grid": "x",
+		"@3mo/group-box": "^0.0.1",
 		"@3mo/heading": "x",
 		"@3mo/icon": "x",
 		"@3mo/icon-button": "x",
@@ -44,6 +45,7 @@
 		"@3mo/radio": "x",
 		"@3mo/resize-observer": "x",
 		"@3mo/scroller": "x",
+		"@3mo/section": "^0.1.1",
 		"@3mo/slider": "x",
 		"@3mo/slot-controller": "x",
 		"@3mo/splitter": "x",
