--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"test:ci": "npm run build && npm run test"
 	},
 	"dependencies": {
+		"@3mo/alert": "x",
 		"@3mo/anchor": "x",
 		"@3mo/button": "x",
 		"@3mo/button-group": "x",
@@ -32,9 +33,10 @@
 		"@3mo/checkbox-group": "x",
 		"@3mo/circular-progress": "x",
 		"@3mo/fab": "x",
+		"@3mo/fab-group": "x",
 		"@3mo/flex": "x",
 		"@3mo/grid": "x",
-		"@3mo/group-box": "^0.0.1",
+		"@3mo/group-box": "x",
 		"@3mo/heading": "x",
 		"@3mo/icon": "x",
 		"@3mo/icon-button": "x",
