chore: Migrate to @3mo/tab package

--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
 		"@3mo/radio": "x",
 		"@3mo/resize-observer": "x",
 		"@3mo/scroller": "x",
-		"@3mo/section": "^0.1.1",
+		"@3mo/section": "x",
 		"@3mo/slider": "x",
 		"@3mo/slot-controller": "x",
 		"@3mo/splitter": "x",
 		"@3mo/switch": "x",
+		"@3mo/tab": "x",
 		"@3mo/virtualized-scroller": "x",
 		"@a11d/lit": "x",
 		"@a11d/lit-application": "x",
@@ -60,15 +61,11 @@
 		"@lit-labs/task": "2.x",
 		"@material/mwc-dialog": "0.27.x",
 		"@material/mwc-drawer": "0.27.x",
-		"@material/mwc-fab": "0.27.x",
 		"@material/mwc-formfield": "0.27.x",
 		"@material/mwc-list": "0.27.x",
 		"@material/mwc-menu": "0.27.x",
 		"@material/mwc-ripple": "0.27.x",
-		"@material/mwc-slider": "0.27.x",
 		"@material/mwc-snackbar": "0.27.x",
-		"@material/mwc-tab": "0.27.x",
-		"@material/mwc-tab-bar": "0.27.x",
 		"@material/mwc-textarea": "0.27.x",
 		"@ts-stack/markdown": "1.x",
 		"@types/jasmine": "4.x",
