--- a/samples/photos/package.json
+++ b/samples/photos/package.json
@@ -8,10 +8,10 @@
 		"@3mo/model": "file:../.."
 	},
 	"devDependencies": {
-		"ts-lit-plugin": "*",
-		"typescript": "4.*",
-		"webpack": "5.*",
-		"webpack-cli": "*",
-		"webpack-dev-server": "^4.10.0"
+		"ts-lit-plugin": "x",
+		"typescript": "4.x",
+		"webpack": "5.x",
+		"webpack-cli": "x",
+		"webpack-dev-server": "4.x"
 	}
 }
