feat: Add collapsible-card package

--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
 		"@3mo/card": "x",
 		"@3mo/checkbox": "x",
 		"@3mo/checkbox-group": "x",
-		"@3mo/chip": "^0.0.1",
+		"@3mo/chip": "x",
 		"@3mo/circular-progress": "x",
+		"@3mo/collapsible-card": "x",
 		"@3mo/fab": "x",
 		"@3mo/fab-group": "x",
 		"@3mo/flex": "x",
