--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@3mo/key-path": "x",
 		"@3mo/linear-progress": "x",
 		"@3mo/loading-button": "x",
+		"@3mo/media-query-observer": "x",
 		"@3mo/mutation-observer": "x",
 		"@3mo/radio": "x",
 		"@3mo/resize-observer": "x",
